--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +7,26 @@
   font-size: 62.5%;
 }
 
+html {
+  -webkit-tap-highlight-color: transparent; /*pode ser transparent também*/
+}
+
 body {
-  background: #1f2034;
-  margin: 0 120px;
+  background-image: url("../../public/background.png");
+  /* margin: 0 120px; */
+  height: 9000px;
+}
+
+@media screen and (min-width: 768px) {
+  .HomeAvatarImage {
+    width: 415px;
+    height: 500px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .HomeAvatarImage {
+    width: 498px;
+    height: 600px;
+  }
 }
