--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  background-image: url("../../public/background.png");
+  background-image: url("/background.png");
   /* margin: 0 120px; */
   height: 9000px;
 }
