--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background: url("../../public/background.png");
+  background: url("/background.png");
 }
 
 body::-webkit-scrollbar {
@@ -21,7 +21,15 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #777;
+  background: linear-gradient(#998ab8, #c1f1fe) center center;
+  background-size: cover;
+}
+
+.HomeBackground {
+  object-fit: cover;
+object-position: top center;
+  width: 100%;
+  height: 100vh;
 }
 
 .ProjectsCardImage {
